# faiss

./: .env.example  .gitignore  INSTALL.md  QUICKSTART.md  README.md  outline.md  outline_vn.md  pyproject.toml  requirements.txt
data/: README.md  embed_vietnamese_text.py  vietnamese_dataset_generator.py
doc_pptx/: FAISS_VERSION3.pptx  V2.NHOM1.FAISS LIBRARY.docx
examples/: 01_basic_search.py  01_basic_search_visualization.ipynb  02_ivf_clustering_visualization.ipynb  02_ivf_index.py  03_index_comparison_visualization.ipynb  03_pq_compression.py  04_hnsw_graph.py  04_hnsw_visualization.ipynb  06_real_world.py  06_real_world_visualization.ipynb  07_vietnamese_search_demo.ipynb  NOTEBOOKS_README.md  __init__.py
utils/: __init__.py  benchmark.py  data_generator.py  visualization.py
